2011-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix autoconf warnings.

5.5.2

2011-05-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc2045/rfc2045cdecode.c: Tolerate lowercase hexadecimal characters
	in quoted-printable-encoded content.

2011-05-06  Thomas Jacob <jacob@internet24.de>

	* unicode/unicode.c: Compilation fixes.

5.5.1

2011-04-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* msg2html.c (showmsgrfc2369_header): Fix memory corruption.

5.5.0

2011-04-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc2045/rfc3676parser.c: Detect content produced by broken mail
	software (I'm looking at you, Apple Mail), that spews out an entire
	paragraph as a single physical line of text. When an excessively long
	line is detected, it gets rewrapped manually.

2011-03-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* html.c (search_tags): Receive a ubuf ptr for the key. Remove
	ubuf_append_0().

	* rfc2045/rfc3676parser.c (count_quote_level): Revert previous
	patch. Do not parse > indentation in non-flowed text.

	* rfc2045/rfc2045reply.c (reply_contents): Remove extra space after
	> prefix was reformatting non-flowed text.

2011-03-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* html.c (open_element): Fix accounting of discardable elements.

2011-03-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* filter.c: Remove lots of dead code. Fix force-wrapping.

2011-03-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* html.c (seen_attrname): Permit '-' characters in attribute names
	(HTTP-EQUIV).

2011-03-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* html.c (seen_closing_elem): Allow : character in closing element
	name.
	(seen_opening_elem): Allow : character in opening element name.
	(seen_attrname): Allow : character in attribute name.

	* msg2html.c (do_text_line_contents): Fix memory corruption.

	* folder.c (get_textlink): Memory leak.

	* msg2html.c (showmsgrfc2369_header): Fix memory corruption/leak.
